log_output/manifests/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: exercises
spec:
  stripPrefix:
    prefixes:
      - /pingpong
