log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: rdmon14/log-output:v100
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
