log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dwk-routes
  namespace: exercises
spec:
  parentRefs:
  - name: dwk-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: ping-pong-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 80
